...
        public let lunchDinner: [String]
        public let snacks: [String]
    }

    public static let cuisines: [Cuisine] = [
        Cuisine(
            name: "Maharashtrian",
            dishes: CuisineDishes(
                breakfast: [
                    "Poha", "Sabudana Khichdi", "Thalipeeth", "Misal Pav", "Upma",
                    "Idli Sambaar", "Sandwich",
                ],
                lunchDinnerVeg: [
                    "Puran Poli", "Varan-Bhaat", "Zunka-Bhakar", "Bharli Vangi", "Pav Bhaji",
                ],
                lunchDinnerNonVeg: ["Kolhapuri Chicken", "Malvani Fish Curry"],
...
